# cpp-tdd-katas

./: .gitignore  CMakeLists.txt  README.md  main.cpp  vcpkg.json
.devcontainer/: Dockerfile
.github/workflows/: cmake-test-coverage.yml
bowling-catch/: main.cpp
bowling-catch/src/: bowling.hpp
bowling-catch/tests/: CMakeLists.txt  bowling_tests.cpp
bowling-gtest/: CMakeLists.txt
bowling-gtest/src/: bowling_game.cpp  bowling_game.hpp
bowling-gtest/tests/: bowling_game_tests.cpp
document-editor-gtest/: main.cpp
document-editor-gtest/src/: application.hpp  clipboard.hpp  command.hpp
document-editor-gtest/tests/: CMakeLists.txt  application_tests.cpp
document-editor-gtest/tests/mocks/: mocks.hpp
mars-rover-catch/: CMakeLists.txt  main.cpp
mars-rover-catch/src/: rover.hpp
mars-rover-catch/tests/: CMakeLists.txt  tests_mars_rover.cpp
recently-used-list-catch/src/: recently_used_list.hpp
recently-used-list-catch/tests/: CMakeLists.txt  recently_used_list_tests.cpp
recently-used-list-gtest/: CMakeLists.txt
recently-used-list-gtest/src/: recently_used_list.hpp
recently-used-list-gtest/tests/: CMakeLists.txt  recently_used_lists_tests.cpp
slides/: PITCHME.md  PITCHME.yaml
slides/css/: custom-theme.css
src/: CMakeLists.txt  bowling_game.hpp
tests/: CMakeLists.txt  bowling_game_tests.cpp
